src/index.scss
/* Main properties */

html {
  margin: 0;
  padding: 0;
  position: relative;
  min-height: 100%;
}

body {
  margin: 0;
  padding: 0;
  background-color: #faf9f8;
  margin-bottom: 191px; /* Default footer height */
  height:100%;
}

footer {
  position: absolute;
  bottom: 0;
  width: 100%;
}

main {
  position: relative;
  min-height: 100%;
}


/* Fix bootstrap outline when click */
a:active,
a:focus,
button:active,
button:focus,
.ms-Button:active,
.ms-Button:focus {
  outline: 0;
  outline: none;
  box-shadow: none !important;
}


/* Align text when in mobile view */
@media only screen and (max-width: 992px) {
  .center-mobile {
    text-align: center !important;
  }
}



/* Responsive footer */
@media only screen and (max-width: 992px) {
  body {
    margin-bottom: 191px;
  }
}

@media only screen and (min-width: 768px) {
  footer .mid-column {
    margin-left: 15%;
  }
}

@media only screen and (max-width: 767px) {
  body {
    margin-bottom: 469px;
  }

  footer .row {
    text-align: center;
  }

  footer .contacts {
    margin-top:0px;
  }

  footer .contacts .text, footer .main-col .text {
    margin-left:25%;
    margin-right: 25%;
  }

  footer .text {
    margin-left: 15%;
    margin-right: 15%;
  }
}

@media only screen and (max-width: 485px) {
  body {
    margin-bottom: 540px;
  }
}

@media only screen and (max-width: 363px) {
  body {
    margin-bottom: 550px;
  }
}

@media only screen and (max-width: 320px) {
  body {
    margin-bottom: 560px;
  }
}

@media only screen and (min-width: 767px) {
  footer .row {
    margin-left: 3%;
  }
}




/* Responsive menu and title */
@media only screen and (min-width: 587px) {
  header .headerRow {
    margin-left: 1rem!important;
    margin-right: 1rem !important;
    margin-bottom: 0 !important;
  }
  .header-menu .pivot {
    display: block;
  }

  .header-menu .dropdown {
    display: none;
  }
}

@media only screen and (max-width: 586px) {
  header .headerRow {
    margin-left: .5rem !important;
    margin-right: .25rem !important;
    margin-bottom: 0 !important;
  }

  .header-menu .pivot {
    display: none;
  }

  .header-menu .dropdown {
    display: block;
  }

  .header-menu .ms-Dropdown-title {
    display: none;
  }

  .header-menu .ms-Dropdown-container {
    float:right;
    width:30px;
  }

  .header-menu .ms-Dropdown-caretDownWrapper {
    right: 6px;
  }
}




/* Dropdown style for header-menu */
.header-menu .ms-Dropdown-title { 
  border-style: none;
  height: 44px;
  justify-content: center;
  text-align: center;
}


/* Grid system adjustments for filter container */
@media only screen and (max-width: 766px) {
  .courses-filter-options .col-sm-12 {
    max-width: 450px;
    text-align: center;
  }
}

@media only screen and (max-width: 540px) {
  /* Courses filter options è il container */
  .courses-filter-options, .department-choose .row {
    margin-right:0%;
    margin-left:0%;
  }
}



/* Section adjustments */
@media only screen and (max-width: 575px) {
  .organization .col-12, .contributors .col-12 {
    max-width: 350px;
  }

  .department-choose .col-sm-12 {
    max-width: 450px;
    text-align: center;
  }

  .administrators .title {
    margin-right:15%;
    margin-left:15%;
  }

  .courses-filter-options .col-xs-12 {
    max-width: 350px;
    text-align: center;
  }

  .representatives .people-list .col-xs-12, .courses .admin-list .col-xs-12 {
    margin-left:15%;
    max-width: 250px;
    text-align: center;
  }

  .representatives .people-list, .courses .admin-list {
    justify-content: center;
  }

  .col-persona {
    max-width: 230px;
    margin-left:10%;
  }

  .rules .col-12 {
    max-width: 250px;
  }

  .home .telegram-advantages-list {
    margin-left: 20% !important;
  }
}

@media only screen and (max-width: 380px) {
  .services .ms-Card {
    min-width:100px;
  }
}


/* Adjustment for mobile-view ms-card in coursesList and additionalGroupsView */
@media only screen and (min-width: 501px) {
  .course-list .listGridTile, .additional-groups .listGridTile {
    text-align: center;
    outline: none;
    position: relative; 
    float: left;
  }
}

@media only screen and (max-width: 500px) {
  .course-list .ms-Card, .additional-groups .ms-Card {
    width: 100%;
    max-width:100%;
  }

  .course-list .listGridTile, .additional-groups .listGridTile {
    width: 100% !important;
    max-width: 100%;
  }
}


/*---------------------
  Additional properties
---------------------*/

@media only screen and (max-width: 640px) { /* Dropdown items in mobile visualization when using icons act buggy. Must create issue in fluentUi repo */
  .ms-Dropdown-item {
    margin-bottom: 10px !important;
  }
}

.rules .ms-Button-flexContainer {
  margin: 7px;
}

.courses .ms-Button-flexContainer {
  margin: 5px;
}

.header-menu .ms-Dropdown-title {
  line-height: 45px;
  padding:0;
}

.additional-groups .ms-List, .course-list .ms-List { /* Padding for card-list in courses and additionalGroups sections */
  padding: 3px;
}

.services .ms-CardSection {
  text-align: left;
}

.ms-TooltipHost { /* For showing tooltip correctly on settings icon */
  display: inline;
}

/* This was used for Persona component without text
.organization .ms-Persona {
  max-width: 50px;
  margin-left: auto;
  margin-right: auto;
}
*/

.contributors .ms-Persona {
  width: 48px;
}

.MuiChip-label {
  font-family: "Segoe UI", "Segoe UI Web (West European)", "Segoe UI", -apple-system, BlinkMacSystemFont, Roboto, "Helvetica Neue", sans-serif;
  font-size: 11px;
}

.organization .ms-Card {
  min-width: 100px !important;
}

.course-list .ms-Persona-primaryText {
  font-weight: 600;
}

/* MessageBar component adjustments */
.ms-MessageBar-dismissSingleLine {
  display: none;
}

.ms-MessageBar-text {
  display: block;
  text-align: center;
}

/* ChoiceGroup adjustments to not show hover effect */
.degree-informations .ms-ChoiceField-field:hover::before, .university-links .ms-ChoiceField-field:hover::before,
.degree-informations .ms-ChoiceField-field:focus::before, .university-links .ms-ChoiceField-field:focus::before {
  opacity: 0;
}

.degree-informations .ms-ChoiceField-field:hover::after, .university-links .ms-ChoiceField-field:hover::after
.degree-informations .ms-ChoiceField-field:focus::after, .university-links .ms-ChoiceField-field:focus::after {
  opacity: 0;
}

.degree-informations .ms-ChoiceField-labelWrapper, .university-links .ms-ChoiceField-labelWrapper {
  overflow: visible;
}

.degree-informations .ms-ChoiceFieldGroup-flexContainer {
  display: flex;
  justify-content: center;
}

@media only screen and (max-width: 768px) {
  .university-links .ms-ChoiceFieldGroup-flexContainer {
    display: flex;
    justify-content: center;
  }
}


/* Dialog component adjustments */
.ms-Dialog-main {
  margin-left: 10px;
  margin-right: 10px;
}

@media only screen and (max-width: 480px) {
.ms-Dialog-main {
    width: auto !important;
    margin-left:10px;
    margin-right:10px;
  }
}

/* Header Adjustments */
header .ms-Image-image {
  display: inline;
  margin-bottom: 9px !important;
}

